--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parse": "^0.1.0",
     "config": "^3.3.3",
     "consign": "^0.1.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-postgres": "^0.6.2",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0"
